added latest revisions April 2017

--- a/chapter_floodinundation.tex
+++ b/chapter_floodinundation.tex
@@ -298,7 +298,7 @@ The sensitivity analysis of the model \(m\) parameter was initially done using o
 \subsection{Erosional parameterisation}
 The results of the numerical modelling simulations suggested that choice of erosional parameterisation exerts a secondary control on the hydrological response of a catchment when compared to the effects of the choice in rainfall resolution input. Consistently across simulations, the enabling of a transport-limited (\texttt{TLIM}) erosional parameterisation in the HAIL-CAESAR model resulted in higher predicted peak discharges, evident in both the gridded rainfall and uniform rainfall sets of simulations. Again, the size of the catchment appears to be a factor in determining the degree of sensitivity, with the differences in hydrological output greater in the larger Ryedale catchment when using erosion-enabled simulations. The differences in discharge, however, are relatively smaller in both cases and any change in discharge from varying the choice of erosion law is surpassed by using a gridded rainfall input source over a spatially uniform one.
 
-The same limited sensitivity to erosional parameterisation is noted by \citep{wong2015sensitivity}, using a similar hydraulic model to investigate flood inundation sensitivity to channel morphological change during flood events. The hydraulic model used in the \citet{wong2015sensitivity} study is based on the same two-dimensional flood inundation model used in HAIL-CAESAR, coupled with a simple erosional model that allows the channel bed elevation to be eroded (but no sediment deposited) during the course of a flood. The authors of the study note that differences in hydrological response are minimal during erosion-enabled simulations, though there is a small increase of up to 5\% in the simulated mean depth of floodwaters throughout the event they simulate. By contrast, the results presented here show that floodwater depths on average are lower in erosion-enabled simulations. The erosion-enabled simulations presented in this chapter address a limitation in the \citet{wong2015sensitivty} study in that they permit the redistribution of sediments within a catchment through depositional as well as erosional processes.  In theory, such a model could capture channel blockage from sediment build up or infill during a flood, though this behaviour is not immediately apparent from the simulations carried out for these case studies. However, considering the sets of gridded-and uniform-rainfall input simulations separately, the predicted mean water depths in the main channel of each catchment (Figure \ref{fig_channel_depth_ensemble}) are lower in the erosion-enabled simulations indicating that sediment infill of the channels has taken place and reduced water depths in the channels. In the Boscastle simulations, the mean water depths are as much as 1 metre lower in the transport-limited erosion-enabled simulations than the corresponding hydrology-only simulations where the morphology of the channel bed and floodplain are effectively fixed. Average floodplain water depths are also lower in the erosion-enabled Boscastle simulations (Figure \ref{fig_floodplain_depth_ensemble}). An alternative explanation for the lower water depths seen in the erosion-enable simulations is that the coarse model output time step (two-hourly) simply did not capture the exact timing of peak flood water extent, and so the recorded depths for the erosion-enabled simulations are near to, but not quite at the peak of flood inundation.
+The same limited sensitivity to erosional parameterisation is noted by \citep{wong2015sensitivity}, using a similar hydraulic model to investigate flood inundation sensitivity to channel morphological change during flood events. The hydraulic model used in the \citet{wong2015sensitivity} study is based on the same two-dimensional flood inundation model used in HAIL-CAESAR, coupled with a simple erosional model that allows the channel bed elevation to be eroded (but no sediment deposited) during the course of a flood. The authors of the study note that differences in hydrological response are minimal during erosion-enabled simulations, though there is a small increase of up to 5\% in the simulated mean depth of floodwaters throughout the event they simulate. By contrast, the results presented here show that floodwater depths on average are lower in erosion-enabled simulations. The erosion-enabled simulations presented in this chapter address a limitation in the \citet{wong2015sensitivity} study in that they permit the redistribution of sediments within a catchment through depositional as well as erosional processes.  In theory, such a model could capture channel blockage from sediment build up or infill during a flood, though this behaviour is not immediately apparent from the simulations carried out for these case studies. However, considering the sets of gridded-and uniform-rainfall input simulations separately, the predicted mean water depths in the main channel of each catchment (Figure \ref{fig_channel_depth_ensemble}) are lower in the erosion-enabled simulations indicating that sediment infill of the channels has taken place and reduced water depths in the channels. In the Boscastle simulations, the mean water depths are as much as 1 metre lower in the transport-limited erosion-enabled simulations than the corresponding hydrology-only simulations where the morphology of the channel bed and floodplain are effectively fixed. Average floodplain water depths are also lower in the erosion-enabled Boscastle simulations (Figure \ref{fig_floodplain_depth_ensemble}). An alternative explanation for the lower water depths seen in the erosion-enable simulations is that the coarse model output time step (two-hourly) simply did not capture the exact timing of peak flood water extent, and so the recorded depths for the erosion-enabled simulations are near to, but not quite at the peak of flood inundation.
 
 In models that permit the channel to be lowered through erosional processes, but no sediment deposition to take place, the channel and floodplain capacity to store or transport water can only be increased during the flood \citep[e.g.][]{wong2015sensitivity}. The effect of this could either be to increase the rate of water transport downstream through the channels to the floodplains, or to increase the channel capacity to store water during the course of the flood. In the \citet{wong2015sensitivity} study the case seems to have been that water depths have increased on floodplain when erosion was enabled in their model. In models that permit both channel erosion and sediment deposition,  the possibility arises that channel capacity is reduced during the flood through the deposition of sediments in the channel. However, detailed observational evidence recorded after the Boscastle event tends not to support this hypothesis as the amount of floodplain deposited sediments was on the order of centimetres, and most sections of the channel were noted as having undergone net incision rather than deposition. In any case, a detailed analysis of the change in channel carrying capacity was beyond the scope of this study, but it is offered as a potential explanation for some of the differences seen between the \citet{wong2015sensitivity} study and the results of this analysis. A further explanation for the general lack of hydrological sensitivity to morphological changes to the channel and floodplain during large floods is that the channel and floodplain act as a single channel unit \citep{bates2005numerical}, and so localised changes to one hydromorphic feature are compensated for by the other, in effect dampening any potential hydrological sensitivity to erosional processes.
 
