--- a/chapter_rainfallLEMs.tex
+++ b/chapter_rainfallLEMs.tex
@@ -1,5 +1,5 @@
 \chapter{Rainfall representation in current landscape evolution models}
-\label{RainfallInLEMs}
+\label{chapter_RainfallInLEMs}
 \chaptermark{Rainfall representation in current models}
 
 \section{Introduction}
