--- a/literature.bib
+++ b/literature.bib
@@ -438,7 +438,7 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0169555X13005825},
 year = {2013}
 }
 @incollection{Costa1995,
-author = {Costa, John E and Connor, Jim E O},
+author = {Costa, John E and {O'Connor}, Jim E},
 booktitle = {Natural and Anthropogenic Influences in Fluvial Geomorphology; Geophysical Monograph Series; vol. 89},
 keywords = {Congresses,Geophysical Monograph Series,Natural and Anthropogenic Influences in Fluvial Ge,River channels{\&}{\#}8212,Watersheds{\&}{\#}8212,doi:10.1029/GM089p0045,http://dx.doi.org/10.1029/GM089p0045,vol. 89},
 number = {Natural and Anthropogenic Influences in Fluvial Geomorphology},
@@ -3973,3 +3973,84 @@ DOI = {10.5194/hess-2016-530}
   year={2008},
   publisher={Elsevier}
 }
+@article{dana1882flood,
+  title={The flood of the Connecticut River valley from the melting of the Quaternary glacier},
+  author={Dana, James Dwight},
+  journal={American Journal of Science},
+  number={135},
+  pages={179--202},
+  year={1882},
+  publisher={American Journal of Science}
+}
+@article{collier2007flash,
+  title={Flash flood forecasting: What are the limits of predictability?},
+  author={Collier, CG},
+  journal={Quarterly Journal of the royal meteorological society},
+  volume={133},
+  number={622},
+  pages={3--23},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+@article{doswell1996flash,
+  title={Flash flood forecasting: An ingredients-based methodology},
+  author={Doswell III, Charles A and Brooks, Harold E and Maddox, Robert A},
+  journal={Weather and Forecasting},
+  volume={11},
+  number={4},
+  pages={560--581},
+  year={1996}
+}
+@article{whipple2006orogen,
+  title={Orogen response to changes in climatic and tectonic forcing},
+  author={Whipple, Kelin X and Meade, Brendan J},
+  journal={Earth and Planetary Science Letters},
+  volume={243},
+  number={1},
+  pages={218--228},
+  year={2006},
+  publisher={Elsevier}
+}
+@article{sidle2004hydrogeomorphology,
+  title={Hydrogeomorphology: overview of an emerging science},
+  author={Sidle, Roy C and Onda, Yuichi},
+  journal={Hydrological Processes},
+  volume={18},
+  number={4},
+  pages={597--602},
+  year={2004},
+  publisher={Wiley Online Library}
+}
+@article{loague2006physics,
+  title={Physics-based hydrologic-response simulation: Foundation for hydroecology and hydrogeomorphology},
+  author={Loague, Keith and Heppner, Christopher S and Mirus, Benjamin B and Ebel, Brian A and Ran, Qihua and Carr, Adrianne E and BeVille, Susan H and VanderKwaak, Joel E},
+  journal={Hydrological Processes},
+  volume={20},
+  number={5},
+  pages={1231--1237},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+@article{mulvaney1851use,
+  title={On the use of self-registering rain and flood gauges in making observations of the relations of rainfall and flood discharges in a given catchment},
+  author={Mulvaney, TJ},
+  journal={Proceedings of the institution of Civil Engineers of Ireland},
+  volume={4},
+  number={2},
+  pages={18--33},
+  year={1851}
+}
+@techreport{bennett2014flood,
+  title={House of Commons Library Standard Note: Flood defense spending in England},
+  author={Bennett, Oliver},
+  institution={House of Commons Library},
+  year={2014},
+  number={SN/SC/755}
+}
+@book{beven1989floods,
+  title={Floods: hydrological, sedimentological and geomorphological implications.},
+  author={Beven, Keith J and Carling, Paul and others},
+  year={1989},
+  publisher={John Wiley and Sons Ltd.}
+}
+
