--- a/thesis.tex
+++ b/thesis.tex
@@ -10,16 +10,10 @@
 
 % Use this command to output a single chapter
 %\includeonly{chapter_events,chapter_geomorph}
-\includeonly{chapter_floodinundation}
+%\includeonly{chapter_floodinundation}
 %\includeonly{chapter_metdatamodels}
+%\includeonly{introduction}
 
-\DeclareFixedFont{\ttb}{T1}{txtt}{bx}{n}{9} % for bold
-\DeclareFixedFont{\ttm}{T1}{txtt}{m}{n}{9}  % for normal
-
-\usepackage{color}
-\definecolor{deepblue}{rgb}{0,0,0.5}
-\definecolor{deepred}{rgb}{0.6,0,0}
-\definecolor{deepgreen}{rgb}{0,0.5,0}
 
 \usepackage{rotating}
 \usepackage[labelfont=bf]{caption}
@@ -261,7 +255,7 @@
 \appendix
 %\include{appendix_wrf_lem}
 
-\include{appendices}
+%\include{appendices}
 
 %APPENDICES
 %
