--- a/introduction.tex
+++ b/introduction.tex
@@ -1,9 +1,97 @@
 \chapter{Introduction}
 \label{chapter_intro}
 
-%\begin{chapquote}{Lewis Carroll, \textit{Alice in Wonderland}}
-%``Begin at the beginning,'' the King said, gravely, ``and go on till you
-%come to an end; then stop.''
-%\end{chapquote}
+\begin{chapquote}{Leonardo da Vinci \textit{}}
+``Water is the driving force of all nature...''
+\end{chapquote}
 
-\textit{This chapter introduces the topic in a broad setting within the context of landscape evolution under different climatic conditions and meteorology (rainfall spatial patterns). The topic is discussed in its historic context as well briefly. It then goes on to clarify the topic of interest, and relates it to both topical research questions in landscape evolution theory and also the societal impact of intense, erosive rainfall events on the landscape.}
+\section{Overview}
+
+Intense rainfall has the power to cause flash flooding and drive rapid landscape change in the course of a single storm. Rainfall is one of several controls on runoff generation, flood inundation, and sediment dynamics during storms. Understanding how river catchments are sensitive to rainfall patterns during severe storms is important for imporving our ability to predict flood events and the impact they have on the landscape.  Flash floods and the geomorphic effects they have on the landscape pose a risk to communities living in the vicinity of rivers and their floodplains. The majority of the world's population live in temperate or sub-tropical climate regions on the Earth, where water is one of the main forces acting on the landscape and presents a risk to large populations living in proximity to rivers and their floodplains. Flash flooding from intense rainfall can lead to catastrophic consequences for the communities it affects, including loss of life, economic impacts, and damage to the environment. The economic damages in years with substantial flooding events can be costly to residents, businesses, and government. The average economic cost of flooding is estimated at around £1.1 billion annually in England, which could rise to as much as £27 billion by 2080 \citep{bennett2014flood}. The year-to-year impacts from flooding are highly variable, for example, the total costs of the 2007 flooding in the UK was estimated at £3 billion. Outwith the UK, global economic costs due to flooding in the same year were approximately £40 billion \citep{pitt2008pitt}. The variability in the severity of flooding from year-to-year can make mitigation planning difficult, as there is a large degree of natural variability as well as a general increase in likelihood of intense rainfall events in the UK \citep{Kendon2014}. 
+
+%Importance for longer term geomorphic theory.
+Storm events also drive landscape evolution over longer timescales through the cumulative effects of flash flood events over decades and centuries, as well as global changes in the Earth's atmosphere and tectonic activity \citep{Molnar1990,Molnar2001,whipple2006orogen}. Understanding the sensitivity of catchment-scale erosional processes to rainfall variability is therefore important to increasing our knowledge of landscape evolution theory. The duration and intensity of storms is known to have an effect on the long term morphological evolution of landscapes \citep{Solyom2004,solyom2007importance}, as is the effect of orographic precipitation on mountain range morphology \citep{han2015measuring}.
+
+% Summarise why is important in general.
+Improving predictions of how catchments respond to intense rainfall, and its impacts on the landscape, is of critical importance to society, as well as for advancing hydrological and geomorphological theory.
+
+\subsection{Spatial variability in intense rainfall}
+% Rainfall
+Rainfall is perhaps the most straightforward and direct cause of flooding. Where more rain falls in a period of time than can be transported  by a river channel, or stored in other parts of the river catchment, flooding will occur. Indeed, the ``absurdly simple'' concept known as the First Law of Quantitative Precipitation states that the highest rainfall totals are observed where the rainfall rate is highest for the longest period of time \citep{Doswell1996}. Despite it's apparent simplicity, rainfall spatial and temporal patterns can be highly variable down to the catchment scale. The susceptibility of catchments to flash flooding from intense rainfall is dependent on the spatial and temporal distribution of rainfall inputs, as well as the physical characteristics of a river catchment, such as its vegetation cover, soil saturation, sediment dynamics, and channel morphology.
+
+
+Mesoscale rainfall variability.
+
+% State what we know.
+\subsection{Numerical modelling of hydrogeomorphic processes}
+% Introduce why models are important and how thehy are going to be used for this study (although don't repeat what goes into chapter 2/3 too much) Just say in general that you are going to take a numerical modelling approach.
+
+% More specifics
+%\subsection{Flash flooding and hydrogeomorphology}
+% Talk about specifics of flash flooding and how it affects the landscape as well#
+Studying the impact of flash flooding on the landscape has  been of interest to the hydrological, meteorological, and geomorphological communities for centuries. \citep[e.g.][]{dana1882flood,schumm1979geomorphic,Costa1995}. Hydrological models designed to understand and predict flooding in river channels and catchments have existed for over 150 years \citep{mulvaney1851use}, originally arising from civil engineering needs to determine the capacity of culverts and other man-made structures transporting water within river catchments. Mulvaney's (1851) model, later termed \textit{the Rational Method}, was a simple equation designed to capture the key components of the catchment water sources and the resulting peak discharge. The peak discharge, \(Q_p\), is given as follows:
+
+\begin{equation}
+Q_p = CA\overline{R}
+\end{equation}
+
+The Mulvaney equation captures two important components of catchment hydrology: the total catchment area, \(A\), and the maximum catchment-averaged rainfall, \(\overline{R}\), as well as an empirically-derived parameter, \(C\). 
+
+In this thesis I focus on using computer-based numerical models of hydrology and landscape evolution to investigate the sensitivity of hydrology and sediment dynamics to the spatial distribution of rainfall inputs. Computer-based hydrology models have existed almost as long as the modern computing age itself \citep[e.g.][]{beven1979physically}.
+
+%%% Now go on to talk about numerical moels specifically 
+
+%Theoretical applications
+Numerical models have enabled us to address many questions in the theoretical understanding of landscape response to intense rainfall events, such as the influence of stochastic variability in storm intensity and duration \citep{Tucker2000} such as the relative importance of storms in runoff production \citep{Darby2013}  Numerical landscape evolution models have proved useful, if imperfect, tools for the prediction of flooding and landscape change \citep{Tucker2010} both in the short term \citep{beven1984testing}, and in response to longer-duration reponse to changes in rainfall events associated with climate change \citep[e.g][]{coulthard2000modelling,Coulthard2012,hancock2017sediment}.
+
+%Predictive power
+Predicting the impacts of flash flooding has been aided greatly by the use of numerical models. However, most models, particularly those incorporating landscape erosion processes, typically assume a uniform input of rainfall across the area being studied or simulated. In many meteorological situations, this is unrealistic and does not capture the true spatial and temporal variation in rainfall patterns. As many erosional processes are both a) strongly coupled to hydrological processes \citep{sidle2004hydrogeomorphology,loague2006physics,beven1989floods} and b) threshold dependent \citep{snyder2003importance} or non-linear \citep{coulthard1998non,phillips2003sources}, it follows that numerical models that do not realisitcally capture heterogeneity in rainfall inputs will not accurately predict the distribution of floodwaters and the distribution of erosion during spatially heterogeneous rainfall events.
+
+
+\subsection{Technical and methodological needs}
+% State technical and methodological needs
+To investigate whether hydrogeomorhpic processes are sensitive to the spatial detail of rainfall patterns, we first need a numerical model that can capture heterogeneity in rainfall inputs, either through the input of rainfall data from external sources, such as weather radar or numerical weather prediction model output, or through synthetic rainfall data generation \citep[e.g.][]{Peleg2014}. The model should be capable of simulating flood inundation and sediment dynamics as well as representing both spatially variable and spatially uniform rainfall inputs. The choice of model could be made from the existing range of landscape evolution models available (Chapter \ref{chapter_landscape_evol}), from developing a new numerical model from scratch, or taking an existing model and extending its functionality beyond simple rainfall representation. A review of rainfall representation in existing landscape evolution models is discussed in Chapter \ref{chapter_RainfallInLEMs}, where the current limitations in existing modelling approaches are highlighted. 
+
+
+\section{Thesis aims and structure}
+% Talk about thesis aims and structure.
+\subsection{Aims}
+The aims of this thesis are divided into two endeavours: firstly to address the technological and methodological needs outline previously through the development of a suitable numerical landscape evolution model, secondly, to use this model to investigate the sensitivity of flood inundation predictions to rainfall heterogeneity and erosional parameterisation within the model. In the context of this thesis, sensitivity to rainfall spatial variability is evaluated in terms of comparing spatially average rainfall data with high-resolution rainfall radar data (Chapter \ref{chapter_metdata}). Sensitivity to erosion law parameterisation, for the purposes of the simulations carried out is assessed through varying the choice of erosion and sediment transport laws available in the numerical model, described in Chapter \ref{chapter_HAIL-CAESAR}. The thesis aims can be summarised as follows:
+
+\begin{enumerate}
+\item Develop and test a landscape evolution model capable of simulating landscape erosion and flood inundation, incorporating high-resolution rainfall data meteorological data inputs such as rainfall radar or numerical weather prediction model output. %(Chapter \ref{chapter_HAIL-CAESAR}).
+
+\item Assess the sensitivity of flood inundation predictions during intense rainfall events to two competing factors:
+\begin{enumerate}
+\item The spatial variability of input rainfall data.
+\item The choice of erosion law parameterisation.
+\end{enumerate}
+
+\item Assess the sensitivity of sediment yields and distribution of erosion during intense rainfall events to the spatial resolution of rainfall input data. The same two factors in are assessed as sources of sensitivity:
+\begin{enumerate}
+\item The spatial variability of input rainfall data.
+\item The choice of erosion law parameterisation.
+\end{enumerate}
+\end{enumerate}
+
+\subsection{Structure}
+
+Following this introductory chapter, Chapter \ref{chapter_landscape_evol}\footnote{An extended version of Chapter \ref{chapter_landscape_evol} was published in the British Society for Geomorphology's \textit{Geomorphological Techniques} collection of technical review papers \citep{valters2016modelling}} presents an overview of landscape erosion and evolution models (LEMs), their underlying principles and implementation including a discussion of the capabilities and limitations of current landscape evolution models. Chapter \ref{chapter_RainfallInLEMs} reviews the current approaches in the numerical modelling literature to represent rainfall and rainfall spatial variability in landscape evolution models, and highlights the current limitations in such approaches. The current research questions in hydro-geomorphological sensitivity to rainfall spatial variability are discussed in tandem with the technical developments required in numerical models to better address these questions. Chapter \ref{chapter_metdata} presnts an overview of rainfall radar data sources, with a focus on data products available in the UK. Based on the discussion and conclusions in Chapter \ref{chapter_RainfallInLEMs}, it was decided to re-develop an existing model and extend its functionality to enable ensemble simulations on high-performance computing (HPC) services, integrating high-resolution rainfall radar as input data to the model. The technical development of the model is discussed in Chapter \ref{chapter_HAIL-CAESAR} and the performance and parallel scalability of the model code is assessed. The investigation of aims 2) and 3) is presented in the remaining chapters: Chapter \ref{chapter_events} presents two case studies of flash flooding in the UK, which are used in the following Chapters to investigate hydrogeomorphic sensitivity to rainfall spatial heterogeneity and erosion process parameterisation. The meteorological background and impact of
+the two events is described and the set-up of the numerical modelling experiments is presented. Chapter \ref{chapter_flood_model_sensitivity} assesses how the flood-inundation component of the model is sensitive to the choice of erosional process parameterisation and to the resolution of rainfall input data. Chapter \ref{chapter_hydrogeomorph} focuses on how sediment flux and the spatial distribution of erosion during an intense rainfall event is sensitive to both the choice of erosion law and the resolution of rainnfall input data. A further discussion and conclusion, synthesising the results of the preceding chapters is presented in Chapter \ref{chapter_conclusion}.
+
+%Restatement of the problem: With this more fulsome treatment of context in mind, the reader is ready to hear a restatement of the problem and significance; this statement will echo what was said in the opening, but will have much more resonance for the reader who now has a deeper understanding of the research context.
+
+%Restatement of the response: Similarly, the response can be restated in more meaningful detail for the reader who now has a better understanding of the problem.
+
+%Roadmap: Brief indication of how the thesis will proceed.
+
+%% 
+% First of all we need a better model for ensembles.
+
+% Then we need to set out the investigations to solve the hypotheses.
+
+% Talk about larger picture at end? (Back to possible generalisations that could be made out of the research.
+
+
+
+
