--- a/thesis.bib
+++ b/thesis.bib
@@ -1740,6 +1740,15 @@ url = {http://doi.wiley.com/10.1029/2003WR002496},
 volume = {40},
 year = {2004}
 }
-
+@article{whipple2006orogen,
+  title={Orogen response to changes in climatic and tectonic forcing},
+  author={Whipple, Kelin X and Meade, Brendan J},
+  journal={Earth and Planetary Science Letters},
+  volume={243},
+  number={1},
+  pages={218--228},
+  year={2006},
+  publisher={Elsevier}
+}
 
 
