--- a/introduction.tex
+++ b/introduction.tex
@@ -19,8 +19,12 @@ Improving predictions of how catchments respond to intense rainfall, and its imp
 % Rainfall
 Rainfall is perhaps the most straightforward and direct cause of flooding. Where more rain falls in a period of time than can be transported  by a river channel, or stored in other parts of the river catchment, flooding will occur. Indeed, the ``absurdly simple'' concept known as the First Law of Quantitative Precipitation states that the highest rainfall totals are observed where the rainfall rate is highest for the longest period of time \citep{Doswell1996}. Despite it's apparent simplicity, rainfall spatial and temporal patterns can be highly variable down to the catchment scale. The susceptibility of catchments to flash flooding from intense rainfall is dependent on the spatial and temporal distribution of rainfall inputs, as well as the physical characteristics of a river catchment, such as its vegetation cover, soil saturation, sediment dynamics, and channel morphology.
 
+During rain storms, the distribution of rainfall varies in time and space. The spatial distribution of rainfall in a storm is dependent on atmospheric conditions such as the distribution and content of moisture in the atmosphere, wind direction and speed, as well as topography, which can lead to the orographic enhancement of rainfall \citep{Roe2003,Roe2005a,Houze2012}. Spatial variability in rainfall patterns is relative to the size of the catchment over which rain falls and the size of the rainfall feature. From the perspective of the stationary river catchment, rainfall spatially variability is also determined by how a rain cell or cells move across a  catchment during the course of the storm \citep{willems2001spatial}. Typically, rainfall events associated with convective activity, such as occurring in the summer months of the UK, have the potential to create the most spatial variability relative to river catchments, due to their geographically focused characteristics. Convective-style rainfall events are also typically associated with the short intense rainfall events that have led to flash flooding in UK catchments \citep{gray1998mesoscale,bell2000sensitivity,Browning2007,blackburn2008large,Kendon2014}, as well as other catchments further afield \citep{doswell1993flash,Doswell1996}. Spatial variability in convective rain cells can vary considerably; generalised models of rain cell structure shows their spatial distribution of rainfall intensities to be described by a Gaussian \citep{luyckx1998influence,willems2001spatial}, or to put it more evocatively, the shape of a ``wizard's cap'' \citep{solyom2007importance}, rainfall intensities peaking sharply in the centre of the cell and then decaying rapidly towards the edges.
+ 
+In summary, there are many sources of rainfall spatial variability during intense rainfall events at a range of scales, yet from the a numerical modelling perspective these are often overlooked in favour of more simplistic treatment of rainfall input. Though some research has been directed at understanding the sensitivity of purely hydrolgical models to rainfall spatial variability \citep{krajewski1991monte,nicotina2008impact,segond2007simulation}, in hydrodynamic landscape erosion and evolution models it remains to be fully investigated.
 
-Mesoscale rainfall variability.
+
+% Now say why this is important and will be investigated here.
 
 % State what we know.
 \subsection{Numerical modelling of hydrogeomorphic processes}
@@ -29,7 +33,7 @@ Mesoscale rainfall variability.
 % More specifics
 %\subsection{Flash flooding and hydrogeomorphology}
 % Talk about specifics of flash flooding and how it affects the landscape as well#
-Studying the impact of flash flooding on the landscape has  been of interest to the hydrological, meteorological, and geomorphological communities for centuries. \citep[e.g.][]{dana1882flood,schumm1979geomorphic,Costa1995}. Hydrological models designed to understand and predict flooding in river channels and catchments have existed for over 150 years \citep{mulvaney1851use}, originally arising from civil engineering needs to determine the capacity of culverts and other man-made structures transporting water within river catchments. Mulvaney's (1851) model, later termed \textit{the Rational Method}, was a simple equation designed to capture the key components of the catchment water sources and the resulting peak discharge. The peak discharge, \(Q_p\), is given as follows:
+Studying the impact of flash flooding on the landscape has  been of interest to the hydrological, meteorological, and geomorphological communities for centuries. \citep[e.g.][]{dana1882flood,schumm1979geomorphic,Costa1995}. Hydrological models designed to understand and predict flooding in river channels and catchments have existed for over 150 years \citep{mulvaney1851use}, originally arising from civil engineering needs to determine the capacity of culverts and other man-made structures transporting water within river catchments. Mulvaney's model, later termed \textit{the Rational Method}, was a simple equation designed to capture the key components of the catchment water sources and the resulting peak discharge. The peak discharge, \(Q_p\), is given as follows:
 
 \begin{equation}
 Q_p = CA\overline{R}
