--- a/conclusions.tex
+++ b/conclusions.tex
@@ -41,7 +41,10 @@ Secondly, in addition to the speed-up in simulations runtimes observed, the abil
 \section{Future work}
 This study has touched upon the potential for using large ensemble-style simulations to assess sensitivity in landscape evolution modelling studies. Since numerical landscape evolution models typically contain a large number of parameters, particularly as they often combine multiple-process sub-models such as erosion, hydrology, hillslope processes, and other surface processes, a thorough exploration of parameter space is beyond the scope of many studies. Current applications of landscape evolution models rarely makes use of multiple-member ensemble simulations, whereas this practice is more commonly found in hydrological modelling \citep{cloke2009ensemble,wong2015sensitivity} and numerical weather prediction \citep{sivillo1997ensemble}. The HAIL-CAESAR model could be used in this way in future studies to more rigorously assess model sensitivity to user-defined parameters in landscape evolution modelling. The amount of uncertainty present in landscape evolution models is of noted concern \citep{pelletier2015forecasting}, and taking advantage of the increase in computing power in recent decades with the model presented in this thesis would enable a rigorous exploration of model sensitivity to parameter-space, initial model conditions, input data quality, model resolution, and many other sources of potential uncertainty.
 
-Resolution.
+Further development of the model would allow it to tackle large catchments at regional to continental scale, or very high resolution studies of smaller river catchments. High resolution topographic data already exists at grid cell spacings 0.2 to 0.5 m, primarily sourced from lidar-dervied topographic data. At this resolution, river channel and other geomorphological features can be resolved in great detail within the model domain. Though the data is readily available now, few modelling studies have yet made use of such high resolution data, partly because of limitations in computational resources and appropriately designed software. Notwithstanding, the HAIL-CAESAR model would require further development to address the scaling issues highlighted in Chapter \ref{chapter_HAIL-CAESAR}, in order to tackle model domains containing millions of grid cells. A new parallelisation strategy would need to be investigated, such as a distributed memory model parallelisation decomposing the model domain among multiple compute nodes. Such work would require a considerable development effort but there are precedents for hydrological models being parallelised in this way before \citep{vivoni2011real}, and many of the techniques could be applied to landscape evolution models. 
+
+
+Applications.
 
 \section{Summary}
 Concluding remarks.
