--- a/literature.bib
+++ b/literature.bib
@@ -4142,3 +4142,14 @@ DOI = {10.5194/hess-2016-530}
   year={2015},
   publisher={Springer}
 }
+@article{vivoni2011real,
+  title={Real-world hydrologic assessment of a fully-distributed hydrological model in a parallel computing environment},
+  author={Vivoni, Enrique R and Mascaro, Giuseppe and Mniszewski, Susan and Fasel, Patricia and Springer, Everett P and Ivanov, Valeriy Y and Bras, Rafael L},
+  journal={Journal of Hydrology},
+  volume={409},
+  number={1},
+  pages={483--496},
+  year={2011},
+  publisher={Elsevier}
+}
+
